# co-harvest-contracts

contracts/coharvest-bid-pool/: Cargo.toml
contracts/coharvest-bid-pool/src/: bid.rs  contract.rs  msg.rs  state.rs
contracts/coharvest-bid-pool/src/testing/: tests.rs
